--- a/VipApartaments/Views/Shared/_LayoutA.cshtml
+++ b/VipApartaments/Views/Shared/_LayoutA.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
+
+
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -19,16 +21,11 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                       
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Login">Zalogij się</a>
-                        </li>
-                         <li class="nav-item">
+                      
+                         <li class="nav-item active">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="LogOut">Wyloguj</a>
                         </li>
+                        
                         
                     </ul>
                 </div>
