--- a/VipApartaments/Views/Booking/Book.cshtml
+++ b/VipApartaments/Views/Booking/Book.cshtml
@@ -1,27 +1,13 @@
 ﻿@model IEnumerable<VipApartaments.Models.Rooms>
+ @{
+	 Layout = "~/Views/Shared/_LayoutU.cshtml";
+    ViewData["Title"] = "Index";
+}
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-	<title>Booking Form HTML Template</title>
-
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-
-	<!-- Bootstrap -->
-	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
-
-	<!-- Custom stlylesheet -->
-	@*<link type="text/css" rel="stylesheet" href="css/style.css" />*@
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+	
 <style>
 	body {
   font-family: 'Open Sans', sans-serif;
@@ -125,10 +111,8 @@
 				<div class="row">
 					<div class="col-md-4 col-md-push-5">
 						<div class="booking-cta">
-							<h1>Make your reservation</h1>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi facere, soluta magnam consectetur molestias itaque
-								ad sint fugit architecto incidunt iste culpa perspiciatis possimus voluptates aliquid consequuntur cumque quasi.
-								Perspiciatis.
+							<h1>Dokonaj rezerwacji</h1>
+							<p>Jeśli planujesz podróż i chcesz dokonać rezerwacji, ważne jest, aby wybrać odpowiednią datę oraz rodzaj pokoju, który spełni Twoje oczekiwania.
 							</p>
 						</div>
 					</div>
@@ -163,17 +147,17 @@
 											<span class="select-arrow"></span>
 										</div>
 									</div>
-								
-								<div class="form-btn">
-									<button type="submit" class="submit-btn">Zarezerwuj</button>
-								</div>
-							</form>
-							@if (ViewData["Message"] != null)
+								@if (ViewData["Message"] != null)
 							 {
 							<div class="alert alert-primary">
 							 @ViewData["Message"]
 							 </div>
 							 }
+								<div class="form-btn">
+									<button type="submit" class="submit-btn">Zarezerwuj</button>
+								</div>
+							</form>
+							
 						</div>
 					</div>
 				</div>
