--- a/VipApartaments/Views/Clients/Login.cshtml
+++ b/VipApartaments/Views/Clients/Login.cshtml
@@ -1,13 +1,13 @@
 ﻿  @model VipApartaments.Models.Clients
   @{
+	 Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewData["Title"] = "Index";
 }
 
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}<head>
-  	<title>Kocham programoac</title>
+@*@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -15,25 +15,25 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	@*<link rel="stylesheet" href="css/style.css">*@
+	
 
-	</head>
+
 	<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Kocham programować</h2>
+					<h2 class="heading-section">Witaj ponownie!</h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<div class="img" style="background-image: url(images/bg-1.jpg);"></div>
+						<div class="img" style="background-image: url(~/images/bg-1.jpg);"></div>
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
-			      			<h3 class="mb-4">Zajaraj se 420</h3>
+			      			<h3 class="mb-4">Zaloguj się </h3>
 			      		
 							<form asp-action="Login" method="POST">
 			      		<div class="form-group mt-3">
@@ -51,13 +51,13 @@
 		          
 		          
 		          </form>
-				   @if (ViewData["Message"] != null)
+				  @if (ViewData["Message"] != null)
                         {
-                            <div class="alert alert-danger">
-                                @ViewData["Message"]
-                            </div>
-                        }
+                    <div class="alert alert-danger">
+                        @ViewData["Message"]
+                    </div>}
 		          <p class="text-center">Nie masz Konta? <a asp-controller="Clients" asp-action="Create">Zareistruj się </a></p>
+				  <p class="text-center">Zarządzaj <a asp-controller="Clients" asp-action="Admin">Admin</a></p>
 		        </div>
 		      </div>
 				</div>
