added Unt tests

--- a/VipApartaments/Views/Panel/Apanel.cshtml
+++ b/VipApartaments/Views/Panel/Apanel.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@{
     Layout = "~/Views/Shared/_LayoutA.cshtml";
 }
-@using Microsoft.AspNetCore.Http
+
 @model List<VipApartaments.Controllers.Panel.alldetailsModel>
 
 <style>
@@ -80,5 +81,5 @@ tbody tr:hover {
             }
       
         </tbody>
-    </table
+    </table>
 </form>
